manifests-istio/gateway-istio.yaml
##################################################################
# Gateway
##################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-http-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
